--- a/Lista7/Cnn.ipynb
+++ b/Lista7/Cnn.ipynb
@@ -102,10 +102,10 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
-    "print(\"Versão do TensorFlow:\", tf.__version__)\n",
-    "import keras as K\n",
-    "print(\"Versão do Keras:\", K.__version__)"
+    "# import tensorflow as tf\n",
+    "# print(\"Versão do TensorFlow:\", tf.__version__)\n",
+    "# import keras as K\n",
+    "# print(\"Versão do Keras:\", K.__version__)"
    ]
   },
   {
